@@ -19,8 +19,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <reststop.version>3.7-SNAPSHOT</reststop.version>
-        <kotlin.version>1.2.30</kotlin.version>
+        <reststop.version>3.8-SNAPSHOT</reststop.version>
+        <kotlin.version>1.2.31</kotlin.version>
         <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
 
         <slf4j-api.version>1.7.25</slf4j-api.version>
@@ -148,12 +148,12 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <!--<compilerArgs>
-                        <arg>&#45;&#45;add-modules</arg>
+                    <source>1.10</source>
+                    <target>1.10</target>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
                         <arg>java.xml.ws.annotation</arg>
-                    </compilerArgs>-->
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
